# ICT-4007-Skeleton-API

./: .replit  Makefile  README.md  logging.py  main.py  pyproject.toml  settings.py
core/: settings.py
router/: core.py  server.py  week_1.py  week_x.py  week_y.py
